# Ising_model

./: .gitignore  CMakeLists.txt  README.md  hpc_run.sh  main.cu
inc/: cudaBlocks.cuh  cudaSeq.cuh  cudaThreads.cuh  cudaThreadsShared.cuh  cudaThreadsSharedGen.cuh  seq.hpp
lib/inc/: nanobench.h
src/: cudaBlocks.cu  cudaBlocksGen.cu  cudaSeq.cu  cudaThreads.cu  cudaThreadsGen.cu  cudaThreadsShared.cu  cudaThreadsSharedGen.cu  seq.cu
